# Projekti-Rasti

./: .gitignore  README.md
qt-client/: CMakeLists.txt  README.md
qt-client/src/: mainwindow.cpp  mainwindow.h
rest-api/: .env.example  README.md  db.js  package.json  server.js
rest-api/postman/: ATM_Assignment_API.postman_collection.json
rest-api/routes/: books.js  cars.js
rest-api/sql/: schema.sql
